15. 3Sum (optimisation)