@@ -18,22 +18,33 @@ import java.util.*;
  * 3.2.2. Если curSum>0 значит правая граница [k] перевешивает в плюс и потому k-1 (уменьшает значение)
  * 4. Собираем в Set<List<Integer>> для обеспечения уникальности триплетов
  * 5. Переводим Set в искомый List<List<Integer>>
+ * ! Оптимизация:
+ * 1. i до nums.length-2, так как уже есть j, k
+ * 2. пропускаем дубликаты, пока не найдём отличающийся от предыдущего
+ * 3. Обёртка Arrays.asList() вместо копии List.of()
+ * P.S. Эти шаги увеличивают скорость и уменьшает необходимую память
  */
 public class ThreeSum {
     public static List<List<Integer>> threeSum(int[] nums) {
         Arrays.sort(nums);
-        Set<List<Integer>> set = new HashSet<>();
         List<List<Integer>> rsl = new ArrayList<>(new ArrayList<>());
         int curSum = 0;
-        for (int i = 0; i < nums.length; i++) {
+        for (int i = 0; i < nums.length - 2; i++) {
+            if (i > 0 && nums[i] == nums[i - 1]) {
+                continue;
+            }
             int j = i + 1;
             int k = nums.length - 1;
             while (j < k) {
                 curSum = nums[i] + nums[j] + nums[k];
                 if (curSum == 0) {
-                    set.add(new ArrayList<>(List.of(nums[i], nums[j], nums[k])));
-                    j++;
-                    k--;
+                    rsl.add(Arrays.asList(nums[i], nums[j++], nums[k--]));
+                    while (j < k && nums[j] == nums[j - 1]) {
+                        j++;
+                    }
+                    while (j < k && nums[k] == nums[k + 1]) {
+                        k--;
+                    }
                 } else if (curSum < 0) {
                     j++;
                 } else {
@@ -41,7 +52,6 @@ public class ThreeSum {
                 }
             }
         }
-        rsl.addAll(set);
         return rsl;
     }
 }
